@@ -1,7 +1,7 @@
 #  File src/library/utils/R/head.R
 #  Part of the R package, https://www.R-project.org
 #
-#  Copyright (C) 1995-2020 The R Core Team
+#  Copyright (C) 1995-2022 The R Core Team
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -31,7 +31,9 @@
 checkHT <- function(n, d) {
     len <- length(n)
     msg <- if(len == 0 || all(is.na(n)))
-        gettext("invalid 'n' -  must contain at least one non-missing element, got none.")
+        gettext("invalid 'n' - must contain at least one non-missing element, got none.")
+    else if(!is.numeric(n))
+        gettext("invalid 'n' - must be numeric, possibly NA.")
     else if(is.null(d) && len > 1L)
         gettextf("invalid 'n' - must have length one when dim(x) is NULL, got %d", len)
     else if(!is.null(d) && len > length(d))
